fixes review comments

--- a/frontend/packages/dev-console/src/components/pipelines/pipeline-resource/PipelineResourceParam.scss
+++ b/frontend/packages/dev-console/src/components/pipelines/pipeline-resource/PipelineResourceParam.scss
@@ -1,4 +1,4 @@
-.pipelines-resource-form {
+.odc-pipeline-resource-param {
     &__content {
       border: 1px dashed var(--pf-global--BorderColor--100);
       padding: var(--pf-global--spacer--sm);
@@ -7,3 +7,4 @@
       padding: 0;
     }
   }
+  
